# cpp_yahtzee

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  readme.md
game/: game  game.cpp  run.txt
testing/: a.out  diceTest  diceTest.cpp  googleTests.cpp
